@@ -610,6 +610,15 @@ OperationResult transaction::Methods::anyLocal(std::string const& collectionName
   }
 
   VPackBuilder resultBuilder;
+
+  if (_state->isDBServer()) {
+    std::shared_ptr<LogicalCollection> const& collection = trxCollection(cid)->collection();
+    auto const& followerInfo = collection->followers();
+    if (!followerInfo->getLeader().empty()) {
+      return OperationResult(TRI_ERROR_CLUSTER_SHARD_FOLLOWER_REFUSES_OPERATION);
+    }
+  }
+
   resultBuilder.openArray();
 
   auto iterator = indexScan(collectionName, transaction::Methods::CursorType::ANY);
@@ -727,9 +736,9 @@ Result transaction::Methods::documentFastPath(std::string const& collectionName,
     }
     result.add(opRes.slice());
     return Result();
-  } 
+  }
 
-  auto translateName = [this](std::string const& collectionName) { 
+  auto translateName = [this](std::string const& collectionName) {
     if (_state->isDBServer()) {
       auto collection = resolver()->getCollectionStructCluster(collectionName);
       if (collection != nullptr) {
@@ -867,6 +876,16 @@ Future<OperationResult> transaction::Methods::documentLocal(std::string const& c
   std::shared_ptr<LogicalCollection> const& collection = trxCollection(cid)->collection();
 
   VPackBuilder resultBuilder;
+  Result res;
+
+  if (_state->isDBServer()) {
+    auto const& followerInfo = collection->followers();
+    if (!followerInfo->getLeader().empty()) {
+      return futures::makeFuture(
+        OperationResult(TRI_ERROR_CLUSTER_SHARD_FOLLOWER_REFUSES_OPERATION, options));
+    }
+  }
+
   ManagedDocumentResult result;
 
   auto workForOneDocument = [&](VPackSlice const value, bool isMultiple) -> Result {
@@ -910,7 +929,6 @@ Future<OperationResult> transaction::Methods::documentLocal(std::string const& c
     return TRI_ERROR_NO_ERROR;
   };
 
-  Result res;
   std::unordered_map<int, size_t> countErrorCodes;
   if (!value.isArray()) {
     res = workForOneDocument(value, false);
@@ -1713,6 +1731,15 @@ OperationResult transaction::Methods::allLocal(std::string const& collectionName
   TRI_ASSERT(trxCollection(cid)->isLocked(AccessMode::Type::READ));
 
   VPackBuilder resultBuilder;
+
+  if (_state->isDBServer()) {
+    std::shared_ptr<LogicalCollection> const& collection = trxCollection(cid)->collection();
+    auto const& followerInfo = collection->followers();
+    if (!followerInfo->getLeader().empty()) {
+      return OperationResult(TRI_ERROR_CLUSTER_SHARD_FOLLOWER_REFUSES_OPERATION, options);
+    }
+  }
+
   resultBuilder.openArray();
 
   auto iterator = indexScan(collectionName, transaction::Methods::CursorType::ALL);
@@ -2391,14 +2418,14 @@ Future<Result> Methods::replicateOperations(
         auto r = resp.combinedResult();
         bool followerRefused = (r.errorNumber() == TRI_ERROR_CLUSTER_SHARD_LEADER_REFUSES_REPLICATION);
         didRefuse = didRefuse || followerRefused;
-  
+
         if (followerRefused) {
           vocbase().server().getFeature<arangodb::ClusterFeature>().followersRefusedCounter()++;
 
           LOG_TOPIC("3032c", WARN, Logger::REPLICATION)
               << "synchronous replication: follower "
               << (*followerList)[i] << " for shard " << collection->name()
-              << " in database " << collection->vocbase().name() 
+              << " in database " << collection->vocbase().name()
               << " refused the operation: " << r.errorMessage();
         }
       }
@@ -2414,7 +2441,7 @@ Future<Result> Methods::replicateOperations(
             << deadFollower << " for shard " << collection->name()
             << ", status code: " << static_cast<int>(resp.statusCode())
             << ", message: " << network::fuerteToArangoErrorMessage(resp);
-        
+
         Result res = collection->followers()->remove(deadFollower);
         if (res.ok()) {
           _state->removeKnownServer(deadFollower);
@@ -2430,8 +2457,8 @@ Future<Result> Methods::replicateOperations(
         } else {
           LOG_TOPIC("db473", ERR, Logger::REPLICATION)
               << "synchronous replication: could not drop follower "
-              << deadFollower << " for shard " << collection->name() 
-              << " in database " << collection->vocbase().name() 
+              << deadFollower << " for shard " << collection->name()
+              << " in database " << collection->vocbase().name()
               << ": " << res.errorMessage();
           THROW_ARANGO_EXCEPTION(TRI_ERROR_CLUSTER_COULD_NOT_DROP_FOLLOWER);
         }
