@@ -1,6 +1,11 @@
 v3.7.10 (XXXX-XX-XX)
 --------------------
 
+* Follower DB servers will now respond with error code
+  `TRI_ERROR_CLUSTER_SHARD_FOLLOWER_REFUSES_OPERATION`
+  to any read request. This fixes inadequate HTTP 404 responses from followers,
+  e.g. during chaos tests.
+  
 * Fixed Github issue #13632: Query Fails on Upsert with Replace_nth.
 
 * Backported AQL sort performance improvements from devel.
@@ -41,7 +46,6 @@ v3.7.10 (XXXX-XX-XX)
       Query Statistics:
        Writes Exec   Writes Ign   Scan Full   Scan Index   Filtered   Exec Time [s]
                  0            0           0            0          0         1.73940
-
 * Fixed a problem that coordinators would vanish from the UI and the Health API
   if one switched the agency Supervision into maintenance mode and kept left
   that maintenance mode on for more than 24h.
